# universe-simulator

./: CMakeLists.txt  devlog.md
debug/: camera_mesh.cpp  camera_mesh.h  debug_camera.cpp  debug_camera.h
dependencies/glad/: glad.h
includes/: config.h
includes/game/: inputs.h  player.h
includes/inputs/: inputs.h
includes/math/: math_utils.h
includes/physics/: physics_utils.h
includes/render/: bloom.h  cube_map.h  cube_sphere.h  point_sphere.h  shader.h  sphere_render.h
includes/simulation/: body.h  kepler.h  orbit.h
shaders/: bloom.frag  bloom.vert  blur.frag  camera.frag  camera.vert  fragment.frag  planet.frag  skybox_frag.frag  skybox_vert.vert  starfield.frag  starfield.vert  sun.frag  vertex.vert
src/: glad.c  main.cpp
src/engine/: bloom.cpp  cube_map.cpp  cube_sphere.cpp  point_sphere.cpp  sphere_render.cpp
src/game/: inputs.cpp  player.cpp
src/inputs/: inputs.cpp
src/math/: math_utils.cpp
src/shader/: shader.cpp
src/simulation/: body.cpp  orbit.cpp
